--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,114 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-<!-- ------------------------------------- Head ------------------------------------- -->
-
-  <head>
-    <title>CSS hover effects: Fade In Background opacity</title>
-    <style>
-      .wrapper{
-      font-family:sans-serif;
-      width: 280px;
-
-      position:relative;
-      margin: 1.5em ;
-      float: left;
-      }
-      img{
-      opacity: 1;
-      display: block;
-      width:280px;
-      height: 280px;
-      transition: .5s ease;
-      }
-      .content{
-      position: absolute;
-      top:45%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      text-transform: uppercase;
-      font-size: 30px;
-      color:#black;
-      white-space: nowrap;
-      overflow: hidden
-      }
-      .content a{
-      font-size: 18px;
-      display: block;
-      background-color: #black;
-      text-align: center;
-      padding: 10px;
-      cursor: pointer
-      }
-      .overlay{
-      opacity: 0
-      }
-      .wrapper:hover img{
-      opacity: .5
-      }
-      .wrapper:hover .overlay{
-      opacity: 1
-      }
-    </style>
-  </head>
+<%= link_to "全部甜點", root_path %>
+<% @categories.each do |category| %>
+  <%= link_to category.area, category_path(category) %>
+<% end %>
+<%= link_to '新募資', new_dessert_path %>
 
 
-
-<!-- ------------------------------------- Body ------------------------------------- -->
-
-  <body>
-    <div class="main-dessert">
-    <!-- ----------------------------- Main container ----------------------------- -->
-      <nav class="level">
-
-        <!-- Left side 待新增功能
-          <div class="level-left">
-            <div class="level-item">
-              <div class="field has-addons">
-                <p class="control">
-                  <input class="input" type="text" placeholder="Find a post">
-                </p>
-                <p class="control">
-                  <button class="button">
-                    Search
-                  </button>
-                </p>
-              </div>
-            </div>
-          </div>
-        Left side 待新增功能 -->
-
-        <!-- Right side -->
-        <div class="level-right">
-          <!-- 待新增功能
-            <a class="btn btn-1">熱門</a>
-          -->
-
-          <a><%= link_to "全部甜點", root_path, class: "btn btn-2" %></a>
-          <% @categories.each do |category| %>
-            <a><%= link_to category.area, category_path(category), class: "btn btn-2" %></a>
-          <% end %>
-          <a><%= link_to '新募資', new_dessert_path, class: "btn btn-1" %></a>
-        </div>
-
-      </nav><!-- level -->
-
-
-      <div class= "container">
-        <div class="column is-narrow width: 200px;"></div>
-
-        <div class="column ">
-          <hr>
-          <%= render partial: "shared/dessert_list" %>
-        </div>
-
-        <div class="column is-narrow width: 200px;"></div>
-      </div>
-
-    </div><!-- main-dessert -->
-
-
-  </body>
-
-</html>
+<hr>
+<%= render partial: "shared/dessert_list" %>
