--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -1,202 +1,39 @@
-<script>
-const button = document.querySelector('.btn')
-const form   = document.querySelector('.form')
-
-button.addEventListener('click', function() {
-   form.classList.add('form--no')
-});
-</script>
-
-
-<style>
-
-$font-family:   "Roboto";
-$font-size:     14px;
-
-$color-primary: #ABA194;
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: $font-family;
-    font-size: $font-size;
-    background-size: 200% 100% !important;
-    animation: move 10s ease infinite;
-    transform: translate3d(0, 0, 0);
-    background: linear-gradient(45deg, #f7cae6 10%, #A2C7E5 90%);
-    height: 100vh
-}
-
-.user {
-    width: 90%;
-    max-width: 340px;
-    margin: 10vh auto;
-}
-
-.user__header {
-    text-align: center;
-    opacity: 0;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.7s forwards;
-}
-
-.user__title {
-    font-size: $font-size;
-    margin-bottom: -10px;
-    font-weight: 500;
-    color: white;
-}
-
-.form {
-    margin-top: 40px;
-    border-radius: 6px;
-    overflow: hidden;
-    opacity: 0;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.9s forwards;
-}
-
-.form--no {
-    animation: NO 1s ease-in-out;
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    font-family: $font-family;
-    -webkit-appearance: none;
-    border: 0;
-    outline: 0;
-    transition: 0.3s;
-
-    &:focus {
-        background: darken(#fff, 3%);
-    }
-}
-
-.btn {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    font-family: $font-family;
-    -webkit-appearance: none;
-    outline: 0;
-    border: 0;
-    color: white;
-    background: $color-danger;
-    transition: 0.3s;
-
-    &:hover {
-        background: darken($color-danger, 5%);
-    }
-}
-
-@keyframes NO {
-  from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-
-@keyframes arrive {
-    0% {
-        opacity: 0;
-        transform: translate3d(0, 50px, 0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-@keyframes move {
-    0% {
-        background-position: 0 0
-    }
-
-    50% {
-        background-position: 100% 0
-    }
-
-    100% {
-        background-position: 0 0
-    }
-}
-
-    input[type="submit"]{padding:5px 15px; background:#ccc; border:0 none;
-cursor:pointer;
--webkit-border-radius: 5px;
-border-radius: 5px; }
-    input[type="text"]{padding:5px 15px; border:2px black solid;
-cursor:pointer;
--webkit-border-radius: 5px;
-border-radius: 5px; }
-.demo .container2{
-    padding-top: 50px;
-    text-align: center
-}
-</style>
-
-
-<div class="user">
-
-
-  <!-- 錯誤訊息 -->
-  <% if @dessert.errors.any? %>
-    <h3>We have some errors here !</h3>
-    <ul>
-      <% @dessert.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
+<!-- 錯誤訊息 -->
+<% if @dessert.errors.any? %>
+<h3>We have some errors here !</h3>
+<ul>
+  <% @dessert.errors.full_messages.each do |message| %>
+    <li><%= message %></li>
   <% end %>
+</ul>
+<% end %>
 
-  <!-- Create New Dessert Form -->
-  <%= form_for @dessert do |f| %>
+<!-- Create New Dessert Form -->
+<%= form_for @dessert do |f| %>
 
-    <p><%= f.label :name, '甜點名稱' %></p>
-    <p><%= f.text_field :name %></p>
-    <p><%= f.label :image, "甜點照片" %></p>
-    <p><%= f.file_field :image %></p>
-    <p>或在此貼上甜點照片的ig網址</p>
-    <p><%= f.text_field :ig_image_url %></p>
-    <p><%= f.label :price, '單價' %></p>
-    <p><%= f.number_field :price %></p>
-    <p><%= f.label :amount, '販售數量' %></p>
-    <p><%= f.number_field :amount %></p>
-    <p><%= f.label :category, "地區" %></p>
-    <p><%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %></p>
-    <p><%= f.label :location, "面交地點" %></p>
-    <p><%= f.text_field :location %></p>
-    <p><%= f.label :description, '甜點介紹' %></p>
-    <p><%= f.text_area :description %></p>
-    <p><%= f.label :production_time, '製作所需時間' %></p>
-    <p><%= f.text_field :production_time %></p>
-    <p><%= f.label :excess_time, '募資截止時間' %></p>
-    <p><%= f.datetime_select :excess_time, default: Time.now %></p>
-    <p><%= f.label :pick_time, '面交日期時間' %></p>
-    <p><%= f.datetime_select :pick_time, default: Time.now %></p>
-    <%= f.submit "建立",class: "button is-primary" %>
-    <%= link_to '取消', desserts_path, class: "button is-primary" %>
+<p><%= f.label :name, '甜點名稱' %></p>
+<p><%= f.text_field :name %></p>
+<p><%= f.label :image, "甜點照片" %></p>
+<p><%= f.file_field :image %></p>
+<p>或在此貼上甜點照片的ig網址</p>
+<p><%= f.text_field :ig_image_url %></p>
+<p><%= f.label :price, '單價' %></p>
+<p><%= f.number_field :price %></p>
+<p><%= f.label :amount, '販售數量' %></p>
+<p><%= f.number_field :amount %></p>
+<p><%= f.label :category, "地區" %></p>
+<p><%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %></p>
+<p><%= f.label :location, "面交地點" %></p>
+<p><%= f.text_field :location %></p>
+<p><%= f.label :description, '甜點介紹' %></p>
+<p><%= f.text_area :description %></p>
+<p><%= f.label :production_time, '製作所需時間' %></p>
+<p><%= f.text_field :production_time %></p>
+<p><%= f.label :excess_time, '募資截止時間' %></p>
+<p><%= f.datetime_select :excess_time, default: Time.now %></p>
+<p><%= f.label :pick_time, '面交日期時間' %></p>
+<p><%= f.datetime_select :pick_time, default: Time.now %></p>
+<%= f.submit "建立" %>
+<%= link_to '取消', desserts_path %>
 
-  <% end %>
-
-</div>
+<% end %>
