--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -1,185 +1,94 @@
-<div class="container1">
+
+<% if @dessert.image? %>
+  <%= image_tag @dessert.image_url(:thumb) %>
+<% end %>
+
+<!-- IG 照片 -->
+<% if @n.present? %>
+  <%= image_tag image_url("https://instagram.com/p/#{@n}/media/?size=m"), width: '250px' %>
+<% end %>
 
 
-  <!-- 待加入功能
-  <progress class="progress is-danger" value="90" max="100">90%</progress>
-  -->
+<% if current_user.id == @dessert.user.id %>
+  <%= link_to '編輯', edit_dessert_path(@dessert) %> |
+  <%= link_to '刪除', dessert_path(@dessert), method: :delete, data: {confirm:"確定要刪除嗎?"} %> |
+  <%= link_to '訂單狀況', dessert_orders_path(@dessert) %>
+<% end %>
 
-<!-- ------------------------------------ Main container ------------------------------------ -->
-  <nav class="level">
+<p>創作者：
+  <%= link_to user_path(@dessert.user) do %>
+    <%= @dessert.user.name %>
+  <% end %>
+</p>
+
+<p>單價： $ <%= @dessert.price %></p>
+<p>分類區域： <%= @dessert.category.area %></p>
+<p>面交地點： <%= @dessert.location %></p>
+<p>製作所需時間：<%= @dessert.production_time %></p>
+<p>集資截止時間： <%= time_tag @dessert.excess_time %></p>
+<p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
+<p>甜點介紹： <%= simple_format @dessert.description %></p>
+
+<% if current_user.id != @dessert.user.id %>
+    <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+<% end %>
+
+<p>
+  <% if @dessert.time_up? && @dessert.sold_out? %>
+    <strong><h3>募資成功！已結束</h3></strong>
+  <% elsif !@dessert.time_up? && @dessert.sold_out? %>
+    <strong><h3>募資成功！已結束</h3></strong>
+  <% elsif @dessert.time_up? && !@dessert.sold_out? %>
+    <strong><h3>募資已結束</h3></strong>
+  <% else %>
+    <!-- show nothing -->
+  <% end %>
+</p>
+
+<hr>
+
+<% @dessert.comments.each do |comment| %>
+  <h4><strong><%= comment.user.name %></strong></h4>
+  <p><%= simple_format comment.content %></p>
+  <p class="text-muted">
+    <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
+  </p>
+
+  <% if current_user.admin? %>
+    <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete, data: {confirm:"Are you sure?"} %>
+  <% end %>
+
+  <% comment.replies.each do |reply| %>
+      <h4><strong><%= @dessert.user.name %></strong></h4>
+      <p><%= simple_format reply.content %></p>
+      <p class="text-muted">
+        <em><%= "about " + time_ago_in_words(reply.created_at) + " ago" %></em>
+      </p>
+      <% if current_user.admin? %>
+        <%= link_to "Delete", dessert_comment_reply_path(@dessert, comment, reply), method: :delete, data: {confirm:"確定要刪除嗎?"} %>
+      <% end %>
+  <% end %>
+
+  <% if current_user.id == @dessert.user.id %>
+    <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+    <%= form_for [@dessert, comment, @reply] do |f| %>
+      <%= f.text_area :content, placeholder: "回覆" %>
+      <%= f.submit %>
+      <%= f.button "Cancel", type: :reset %>
+    <% end %>
+  <% end %>
+  <hr>
+<% end %><!-- @dessert.comments.each -->
+
+<% if current_user.id != @dessert.user.id %>
+  <%= form_for [@dessert, @comment] do |f| %>
+    <%= f.text_area :content, placeholder: '留個言吧' %>
+    <%= f.submit '留言' %>
+    <%= f.button '取消', type: :reset %>
+  <% end %>
+<% end %>
 
 
-<!-- ------------------------------------ Left side ------------------------------------ -->
-    <div class="level-left">
-      <div class="box3">
-
-        <div class="view view-first">
-          <% if @dessert.image? %>
-            <%= image_tag @dessert.image_url(:thumb) %>
-          <% end %>
-
-          <!-- IG 照片 -->
-          <% if @n.present? %>
-            <%= image_tag image_url("https://instagram.com/p/#{@n}/media/?size=m"), width: '250px' %>
-          <% end %>
-
-          <div class="mask">
-            <h2><%= @dessert.name %></h2>
-
-            <p>創作者：
-              <%= link_to user_path(@dessert.user) do %>
-                <%= @dessert.user.name %>
-              <% end %>
-            </p>
-
-            <p>單價: $ <%= @dessert.price %></p>
-          </div><!-- mask -->
-
-        </div><!-- view view-first -->
-
-        <div class="col-md-4 ">
-        <div class="view view-first">
-
-          <div class="mask">
-            <h2><%= @dessert.name %></h2>
-            <p>創作者：
-              <%= link_to user_path(@dessert.user) do %>
-                <%= @dessert.user.name %>
-              <% end %>
-            </p>
-            <p>單價: $ <%= @dessert.price %></p>
-          </div><!-- mask -->
-
-        </div><!-- view view-first -->
-        </div><!-- col-md-4 -->
-
-      </div><!-- box3 -->
-    </div><!-- level-left -->
-
-<!-- ------------------------------------ Right side ------------------------------------ -->
-  <!-- Right side -->
-    <div class="level-right">
-      <div class="box-comment ">
-
-        <% if current_user.id == @dessert.user.id %>
-          <%= link_to '編輯', edit_dessert_path(@dessert) %> |
-          <%= link_to '刪除', dessert_path(@dessert), method: :delete, data: {confirm:"確定要刪除嗎?"} %> |
-          <%= link_to '訂單狀況', dessert_orders_path(@dessert) %>
-        <% end %>
-
-        <p>創作者：
-          <%= link_to user_path(@dessert.user) do %>
-            <%= @dessert.user.name %>
-          <% end %>
-        </p>
-
-        <p>單價： $ <%= @dessert.price %></p>
-        <p>分類區域： <%= @dessert.category.area %></p>
-        <p>面交地點： <%= @dessert.location %></p>
-        <p>製作所需時間：<%= @dessert.production_time %></p>
-        <p>集資截止時間： <%= time_tag @dessert.excess_time %></p>
-        <p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
-        <p>甜點介紹： <%= simple_format @dessert.description %></p>
-        
-        <% if current_user.id != @dessert.user.id %>
-          <button type="button" class="btn btn-warning">
-            <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
-          </button>
-        <% end %>
-
-        <p>
-          <% if @dessert.time_up? && @dessert.sold_out? %>
-            <strong><h3>募資成功！已結束</h3></strong>
-          <% elsif !@dessert.time_up? && @dessert.sold_out? %>
-            <strong><h3>募資成功！已結束</h3></strong>
-          <% elsif @dessert.time_up? && !@dessert.sold_out? %>
-            <strong><h3>募資已結束</h3></strong>
-          <% else %>
-            <!-- show nothing -->
-          <% end %>
-        </p>
-
-        <hr>
-
-        <section class="hero">
-          <% @dessert.comments.each do |comment| %>
-            <div>
-              <h4><strong><%= comment.user.name %></strong></h4>
-              <p><%= simple_format comment.content %></p>
-              <p class="text-muted">
-                <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
-              </p>
-            </div>
-
-            <div>
-              <% if current_user.admin? %>
-                <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete, data: {confirm:"Are you sure?"} %>
-              <% end %>
-            </div>
-
-            <% comment.replies.each do |reply| %>
-              <div>
-                <h4><strong><%= @dessert.user.name %></strong></h4>
-                <p><%= simple_format reply.content %></p>
-                <p class="text-muted">
-                  <em><%= "about " + time_ago_in_words(reply.created_at) + " ago" %></em>
-                </p>
-              </div>
-
-              <div>
-                <% if current_user.admin? %>
-                  <%= link_to "Delete", dessert_comment_reply_path(@dessert, comment, reply), method: :delete, data: {confirm:"確定要刪除嗎?"} %>
-                <% end %>
-              </div>
-            <% end %>
-
-            <% if current_user.id == @dessert.user.id %>
-              <div class="container2">
-
-                <div class="row">
-                  <%= link_to '立即贊助', new_dessert_order_path(@dessert), class:"button is-danger is-rounded is-large" %>
-                  <%= form_for [@dessert, comment, @reply] do |f| %>
-
-                    <div class="form-group">
-                      <%= f.text_area :content, placeholder: "回覆", class: "form-control" %>
-                    </div>
-
-                    <div class="form-group">
-                      <%= f.submit class: "btn btn-primary" %>
-                      <%= f.button "Cancel", type: :reset, class: "btn btn-default" %>
-                    </div>
-
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
-            <hr>
-          <% end %><!-- @dessert.comments.each -->
-
-          <% if current_user.id != @dessert.user.id %>
-            <div class="reply">
-              <div class="row">
-
-                <%= form_for [@dessert, @comment] do |f| %>
-                  <div class="form-group">
-                    <%= f.text_area :content, placeholder: "留個言吧", class: "form-control" %>
-                  </div>
-                  <div class="form-group">
-                    <%= f.submit '留言', class: "btn btn-primary" %>
-                    <%= f.button '取消', type: :reset, class: "btn btn-default" %>
-                  </div>
-                <% end %>
-
-              </div><!-- row -->
-            </div><!-- reply -->
-          <% end %><!-- if -->
-
-        </section>
-
-      </div><!-- box-comment -->
-    </div><!-- level-right -->
-  </nav><!-- level -->
-</div><!-- container1 -->
 
 <!-- ------------------------------------ Google maps ------------------------------------ -->
 <br>
