--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,210 +1,28 @@
-<script>
-const button = document.querySelector('.btn')
-const form   = document.querySelector('.form')
-
-button.addEventListener('click', function() {
-   form.classList.add('form--no')
-});
-</script>
-
-
-<style>
-
-$font-family:   "Roboto";
-$font-size:     14px;
-
-$color-primary: #ABA194;
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: $font-family;
-    font-size: $font-size;
-    background-size: 200% 100% !important;
-    animation: move 10s ease infinite;
-    transform: translate3d(0, 0, 0);
-    background: linear-gradient(45deg, #f7cae6 10%, #A2C7E5 90%);
-    height: 100vh
-}
-
-.user {
-    width: 90%;
-    max-width: 340px;
-    margin: 10vh auto;
-}
-
-.user__header {
-    text-align: center;
-    opacity: 0;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.7s forwards;
-}
-
-.user__title {
-    font-size: $font-size;
-    margin-bottom: -10px;
-    font-weight: 500;
-    color: white;
-}
-
-.form {
-    margin-top: 40px;
-    border-radius: 6px;
-    overflow: hidden;
-    opacity: 0;
-    transform: translate3d(0, 500px, 0);
-    animation: arrive 500ms ease-in-out 0.9s forwards;
-}
-
-.form--no {
-    animation: NO 1s ease-in-out;
-    opacity: 1;
-    transform: translate3d(0, 0, 0);
-}
-
-.form__input {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    font-family: $font-family;
-    -webkit-appearance: none;
-    border: 0;
-    outline: 0;
-    transition: 0.3s;
-
-    &:focus {
-        background: darken(#fff, 3%);
-    }
-}
-
-.btn {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    font-family: $font-family;
-    -webkit-appearance: none;
-    outline: 0;
-    border: 0;
-    color: white;
-    background: $color-danger;
-    transition: 0.3s;
-
-    &:hover {
-        background: darken($color-danger, 5%);
-    }
-}
-
-@keyframes NO {
-  from, to {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-  }
-
-  10%, 30%, 50%, 70%, 90% {
-    -webkit-transform: translate3d(-10px, 0, 0);
-    transform: translate3d(-10px, 0, 0);
-  }
-
-  20%, 40%, 60%, 80% {
-    -webkit-transform: translate3d(10px, 0, 0);
-    transform: translate3d(10px, 0, 0);
-  }
-}
-
-@keyframes arrive {
-    0% {
-        opacity: 0;
-        transform: translate3d(0, 50px, 0);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translate3d(0, 0, 0);
-    }
-}
-
-@keyframes move {
-    0% {
-        background-position: 0 0
-    }
-
-    50% {
-        background-position: 100% 0
-    }
-
-    100% {
-        background-position: 0 0
-    }
-}
-</style>
-
-<div class="user">
-    <header class="user__header">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg" alt="" />
-        <h1 class="user__title">Sign-up</h1>
-        <br>
-        <br>
-    </header>
+<header class="user__header">
+    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/3219/logo.svg" alt="" />
+    <h1 class="user__title">Sign-up</h1>
+    <br>
+    <br>
+</header>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-    <form class="form">
-  <div class="field">
-    <div class= "control">
-    <%= f.text_field :name, placeholder: 'Username', class: "input is-info", autofocus: true %>
-  </div>
-  </div>
+  
+  <%= f.text_field :name, placeholder: 'Username', autofocus: true %>
 
-  <div class="field">
-    <div class="control">
-    <%= f.email_field :email, placeholder: 'Email', class: "input is-info",autocomplete: "email" %>
-    </div>
-  </div>
+  <%= f.email_field :email, placeholder: 'Email', autocomplete: "email" %>
 
-  <div class="field">
-    <div class="control">
-    <% if @minimum_password_length %>
+  <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, placeholder: 'Password', class: "input is-info",autocomplete: "new-password" %>
-  </div>
-   </div>
-  <div class="field">
-    <div class="control">
-    <%= f.password_field :password_confirmation, placeholder: 'Password confirmation', class: "input is-info",autocomplete: "new-password" %>
-  </div>
-  </div>
+  <% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up",class: "button is-primary" %>
-  </div>
+  <br />
 
-</form>
+  <%= f.password_field :password, placeholder: 'Password', autocomplete: "new-password" %>
+
+  <%= f.password_field :password_confirmation, placeholder: 'Password confirmation', autocomplete: "new-password" %>
+
+  <%= f.submit "Sign up" %>
 <% end %>
+
 <%= render "devise/shared/links" %>
-</div>
-
-<!--
-        <div class="form__group">
-            <input type="text" placeholder="Username" class="form__input" />
-        </div>
-
-        <div class="form__group">
-            <input type="email" placeholder="Email" class="form__input" />
-        </div>
-
-        <div class="form__group">
-            <input type="password" placeholder="Password" class="form__input" />
-        </div>
-
-        <button class="button is-primary" type="button">Register</button>
-    </form>
-</div>
-
--->
-
-
