add category index page for admin

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,3 +1,9 @@
+<div>
+  <%= link_to '全站使用者', admin_users_path %> |
+  <%= link_to '甜點分類表', admin_categories_path %>
+</div>
+
+
 <h2>全站使用者</h2>
 <ul>
   <% @users.each do |user| %>
