--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -2,6 +2,20 @@
 
   <h2>甜點分類總表</h2>
 
+  <div>
+    <%= link_to '全站使用者', admin_users_path %> |
+    <%= link_to '甜點分類表', admin_categories_path %>
+  </div>
+
+  <div class="form-inline" >
+    <%= form_for [:admin, @category] do |f| %>
+      <div class="form-group">
+        <%= f.text_field :area, placeholder: "Category Name",  class: "form-control" %>
+      </div>
+      <%= f.submit class: "btn btn-primary" %>
+    <% end %>
+  </div>
+
   <div class="row">
 
     <div class="col-md-12">
