show errors message when fail to create new category

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -13,8 +13,14 @@
         <%= f.text_field :area, placeholder: "Category Name",  class: "form-control" %>
       </div>
       <%= f.submit class: "btn btn-primary" %>
+      
+      <% if @category.errors.any? %>
+        <%= @category.errors.full_messages.to_sentence %>
+      <% end %>
     <% end %>
   </div>
+
+  <br>
 
   <div class="row">
 
