--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -31,6 +31,7 @@
           <tr>
             <th>#</th>
             <th>Category Name</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -38,6 +39,7 @@
           <tr>
             <th scope="row"><%= category.id %></th>
             <td><%= category.area %></td>
+            <td><%= link_to '編輯', admin_categories_path(id: category.id) %></td>
           </tr>
           <% end %>
         </tbody>
