--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -39,7 +39,10 @@
           <tr>
             <th scope="row"><%= category.id %></th>
             <td><%= category.area %></td>
-            <td><%= link_to '編輯', admin_categories_path(id: category.id) %></td>
+            <td>
+              <%= link_to '編輯', admin_categories_path(id: category.id) %>&emsp;
+              <%= link_to '刪除', admin_category_path(category), method: :delete, data: { confirm: "確定要刪除嗎?"} %>
+            </td>
           </tr>
           <% end %>
         </tbody>
