--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -21,7 +21,7 @@
 <p><%= f.number_field :price %></p>
 <p><%= f.label :amount, '販售數量' %></p>
 <p><%= f.number_field :amount %></p>
-<p><%= f.label :category, "地區" %></p>
+<p><%= f.label :category, "甜點種類" %></p>
 <p><%= f.collection_select :category_id, Category.all, :id, :area, {}, {} %></p>
 <p><%= f.label :location, "面交地點" %></p>
 <p><%= f.text_field :location %></p>
