--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -24,7 +24,16 @@
 <p>單價： $ <%= @dessert.price %></p>
 <p>分類區域： <%= @dessert.category.area %></p>
 <p>面交地點： <%= @dessert.location %></p>
-<p>集資截止時間： <%= time_tag @dessert.excess_time %></p>
+
+<p>
+  集資截止時間：
+  <% if @dessert.amount != 0 && Time.now < @dessert.excess_time %>
+    集資倒數 <%= distance_of_time_in_words(Time.now, @dessert.excess_time) %>
+  <% else %>
+    <strong><h4>集資已結束</h4></strong>
+  <% end %>
+</p>
+
 <p>預定面交時間： <%= time_tag @dessert.pick_time %></p>
 <p>甜點介紹： <%= simple_format @dessert.description %></p>
 
