move comment and reply to the bottom of page

--- a/app/views/desserts/show.html.erb
+++ b/app/views/desserts/show.html.erb
@@ -1,4 +1,3 @@
-
 <% if @dessert.image? %>
   <%= image_tag @dessert.image_url(:thumb) %>
 <% end %>
@@ -62,57 +61,7 @@
 
 <hr>
 
-<% @dessert.comments.each do |comment| %>
-  <h4><strong><%= comment.user.name %></strong></h4>
-  <p><%= simple_format comment.content %></p>
-  <p class="text-muted">
-    <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
-  </p>
-
-  <% if current_user.admin? %>
-    <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete, data: {confirm:"Are you sure?"} %>
-  <% end %>
-
-  <% comment.replies.each do |reply| %>
-      <h4><strong><%= @dessert.user.name %></strong></h4>
-      <p><%= simple_format reply.content %></p>
-      <p class="text-muted">
-        <em><%= "about " + time_ago_in_words(reply.created_at) + " ago" %></em>
-      </p>
-      <% if current_user.admin? %>
-        <%= link_to "Delete", dessert_comment_reply_path(@dessert, comment, reply), method: :delete, data: {confirm:"確定要刪除嗎?"} %>
-      <% end %>
-  <% end %>
-
-  <% if current_user.id == @dessert.user.id %>
-    <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
-    <%= form_for [@dessert, comment, @reply] do |f| %>
-      <%= f.text_area :content, placeholder: "回覆" %>
-      <%= f.submit %>
-      <%= f.button "Cancel", type: :reset %>
-    <% end %>
-  <% end %>
-  <hr>
-<% end %><!-- @dessert.comments.each -->
-
-<% if current_user.id != @dessert.user.id %>
-  <%= form_for [@dessert, @comment] do |f| %>
-    <%= f.text_area :content, placeholder: '留個言吧' %>
-    <%= f.submit '留言' %>
-    <%= f.button '取消', type: :reset %>
-  <% end %>
-<% end %>
-
-
-
 <!-- ------------------------------------ Google maps ------------------------------------ -->
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
 <section class="hero">
   <div class="hero-body">
     <div class="container">
@@ -155,3 +104,47 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBg1YAvzj1UR6oFWo_xjOgr2xp56OPSdJo&callback=initMap">
 </script>
 
+<hr>
+
+<h3>問與答</h3>
+
+<% @dessert.comments.each do |comment| %>
+  <h4><strong><%= comment.user.name %></strong></h4>
+  <p><%= simple_format comment.content %></p>
+  <p class="text-muted">
+    <em><%= "about " + time_ago_in_words(comment.created_at) + " ago" %></em>
+  </p>
+
+  <% if current_user.admin? %>
+    <%= link_to "Delete", dessert_comment_path(@dessert, comment), method: :delete, data: {confirm:"Are you sure?"} %>
+  <% end %>
+
+  <% comment.replies.each do |reply| %>
+      <h4><strong><%= @dessert.user.name %></strong></h4>
+      <p><%= simple_format reply.content %></p>
+      <p class="text-muted">
+        <em><%= "about " + time_ago_in_words(reply.created_at) + " ago" %></em>
+      </p>
+      <% if current_user.admin? %>
+        <%= link_to "Delete", dessert_comment_reply_path(@dessert, comment, reply), method: :delete, data: {confirm:"確定要刪除嗎?"} %>
+      <% end %>
+  <% end %>
+
+  <% if current_user.id == @dessert.user.id %>
+    <%= link_to '立即贊助', new_dessert_order_path(@dessert) %>
+    <%= form_for [@dessert, comment, @reply] do |f| %>
+      <%= f.text_area :content, placeholder: "回覆" %>
+      <%= f.submit %>
+      <%= f.button "Cancel", type: :reset %>
+    <% end %>
+  <% end %>
+  <hr>
+<% end %><!-- @dessert.comments.each -->
+
+<% if current_user.id != @dessert.user.id %>
+  <%= form_for [@dessert, @comment] do |f| %>
+    <%= f.text_area :content, placeholder: '留個言吧' %>
+    <%= f.submit '留言' %>
+    <%= f.button '取消', type: :reset %>
+  <% end %>
+<% end %>
