--- a/app/views/desserts/new.html.erb
+++ b/app/views/desserts/new.html.erb
@@ -35,6 +35,9 @@
   <p><%= f.label :description, '甜點介紹' %></p>
   <p><%= f.text_area :description %></p>
 
+  <p><%= f.label :intro_image, "甜點介紹圖片" %></p>
+  <p><%= f.file_field :intro_image %></p>
+
   <p><%= f.label :excess_time, '募資截止時間' %></p>
   <p><%= f.datetime_select :excess_time, default: Time.now %></p>
 
