import css and require js file

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,7 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "base";
+@import "bootstrap.min";
+@import "fontawesome-all.min";
+@import "style";
