--- a/app/views/desserts/index.html.erb
+++ b/app/views/desserts/index.html.erb
@@ -1,7 +1,19 @@
-<%= link_to "全部甜點", root_path %>
-<% @categories.each do |category| %>
-  <%= link_to category.area, category_path(category) %>
-<% end %>
+<section class = "services">     
+  <div class = "container">
+    <div class = "row">
 
-<hr>
-<%= render partial: "shared/dessert_list" %>
+      <%= link_to "全部甜點", root_path %>
+
+      <% @categories.each do |category| %>
+        <%= link_to category.area, category_path(category) %>
+      <% end %>
+
+      <hr>
+
+      <%= render partial: "shared/dessert_list" %>
+
+    </div>
+  </div>
+</section>
+
+
