--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,36 +1,174 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<script>
+  const button = document.querySelector('.btn')
+  const form   = document.querySelector('.form')
+   button.addEventListener('click', function() {
+     form.classList.add('form--no')
+  });
+</script>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<style>
+  $font-family:   "Roboto";
+  $font-size:     14px;
+  $color-primary: #ABA194;
+   * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
+   body {
+      font-family: $font-family;
+      font-size: $font-size;
+      background-size: 200% 100% !important;
+      animation: move 10s ease infinite;
+      transform: translate3d(0, 0, 0);
+      background: linear-gradient(45deg, #d6b6d5 10%, #f7b75d 90%);
+      height: 150vh
+  }
+   .user {
+      width: 90%;
+      max-width: 340px;
+      margin: 10vh auto;
+  }
+   .user__header {
+      text-align: center;
+      opacity: 0;
+      transform: translate3d(0, 500px, 0);
+      animation: arrive 500ms ease-in-out 0.7s forwards;
+  }
+   .user__title {
+      font-size: $font-size;
+      margin-bottom: -10px;
+      font-weight: 500;
+      color: white;
+  }
+   .form {
+      margin-top: 40px;
+      border-radius: 6px;
+      overflow: hidden;
+      opacity: 0;
+      transform: translate3d(0, 500px, 0);
+      animation: arrive 500ms ease-in-out 0.9s forwards;
+  }
+   .form--no {
+      animation: NO 1s ease-in-out;
+      opacity: 1;
+      transform: translate3d(0, 0, 0);
+  }
+   .form__input {
+      display: block;
+      width: 100%;
+      padding: 20px;
+      font-family: $font-family;
+      -webkit-appearance: none;
+      border: 0;
+      outline: 0;
+      transition: 0.3s;
+       &:focus {
+          background: darken(#fff, 3%);
+      }
+  }
+   .btn {
+      display: block;
+      width: 100%;
+      padding: 20px;
+      font-family: $font-family;
+      -webkit-appearance: none;
+      outline: 0;
+      border: 0;
+      color: white;
+      background: $color-danger;
+      transition: 0.3s;
+       &:hover {
+          background: darken($color-danger, 5%);
+      }
+  }
+   @keyframes NO {
+    from, to {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+    }
+     10%, 30%, 50%, 70%, 90% {
+      -webkit-transform: translate3d(-10px, 0, 0);
+      transform: translate3d(-10px, 0, 0);
+    }
+     20%, 40%, 60%, 80% {
+      -webkit-transform: translate3d(10px, 0, 0);
+      transform: translate3d(10px, 0, 0);
+    }
+  }
+   @keyframes arrive {
+      0% {
+          opacity: 0;
+          transform: translate3d(0, 50px, 0);
+      }
+       100% {
+          opacity: 1;
+          transform: translate3d(0, 0, 0);
+      }
+  }
+   @keyframes move {
+      0% {
+          background-position: 0 0
+      }
+       50% {
+          background-position: 100% 0
+      }
+       100% {
+          background-position: 0 0
+      }
+  }
+</style>
 
-  <%= f.label :name %><br />
-  <%= f.text_field :name, autofocus: true %>
 
-  <%= f.label :email %><br />
-  <%= f.email_field :email, autocomplete: "email" %>
+<div class= "user">
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    Currently waiting confirmation for: <%= resource.unconfirmed_email %>
+  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= devise_error_messages! %>
+
+    <div class="field">
+      <%= f.label :name %><br />
+      <%= f.text_field :name, autofocus: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :email %><br />
+      <%= f.email_field :email, autocomplete: "email" %>
+    </div>
+
+    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+    <% end %>
+
+    <div class="field">
+      <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+      <%= f.password_field :password, autocomplete: "new-password" %>
+      <% if @minimum_password_length %>
+        <br />
+        <em><%= @minimum_password_length %> characters minimum</em>
+      <% end %>
+    </div>
+
+    <div class="field">
+      <%= f.label :password_confirmation %><br />
+      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    </div>
+
+    <div class="field">
+      <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+      <%= f.password_field :current_password, autocomplete: "current-password" %>
+    </div>
+
+    <div class="actions">
+      <%= f.submit "Update" %>
+    </div>
   <% end %>
 
-  <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, autocomplete: "new-password" %>
-  <% if @minimum_password_length %>
-    <br />
-    <em><%= @minimum_password_length %> characters minimum</em>
-  <% end %>
+  <h3>Cancel my account</h3>
 
-  <%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-  <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <%= link_to "Back", :back %>
 
-  <%= f.submit "Update" %>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
