--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,52 +10,73 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default navbar-inverse">
-      <div class="container-fluid">
+    <header class="tr-header">
+      <nav class="navbar navbar-default">
+        <div class="container-fluid">
 
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">Just Dessert</a>
-        </div>
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/"><i class="fab fa-instagram"></i>Just Dessert</a>
+          </div><!-- /.navbar-header -->
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="pull-left text-left nav navbar-nav">
-            <li><%= link_to '新募資', new_dessert_path %></li>
-          </ul>
+          <div class="navbar-left">
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li><%= link_to '新募資', new_dessert_path %></li>
+              </ul>
+            </div>
+          </div><!-- /.navbar-left -->
+          
+          <div class="navbar-right">                          
+            <ul class="nav navbar-nav">
+              <% if current_user %>
 
-          <ul class="pull-right text-right nav navbar-nav">
-            <% if current_user %>
-              <li>
-                <p class="navbar-text">
-                  Hi, <%= current_user.name %>
-                </p>
-              </li>
-
-              <% if current_user&.admin? %>
-                <li><%= link_to '後台管理', admin_root_path %></li>
+                <% if current_user&.admin? %>
+                  <li><%= link_to '後台管理', admin_root_path %></li>
+                <% end %>
+      
+                <li class="dropdown mega-avatar">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+                    <span class="avatar w-32">
+                      <%= image_tag(current_user.avatar.url, width: 30, height: 30, class: "img-resonsive img-circle") %>
+                    </span>
+                    <!-- hidden-xs hides the username on small devices so only the image appears. -->
+                    <span class="hidden-xs">
+                      <%= current_user.name %>
+                    </span>
+                  </a>
+                  <div class="dropdown-menu w dropdown-menu-scale pull-right">
+                    <% if current_user %>
+                      <a class="dropdown-item" href="#"><span><%= link_to('關於我', user_path(current_user)) %></span></a>
+                      
+                      <div class="dropdown-divider"></div>
+                      
+                      <a class="dropdown-item" href="#"><span><%= link_to('登出', destroy_user_session_path, method: :delete) %></span></a>
+                      
+                      <div class="dropdown-divider"></div>
+                      
+                      <a class="dropdown-item" href="#"><span><%= link_to('修改密碼', edit_user_registration_path) %></span></a>
+                    <% end %>
+                  </div>
+                </li><!-- /navbar-item --> 
+              
+              <% else %>   
+                <li><%= link_to('註冊', new_user_registration_path) %></li>
+                <li><%= link_to('登入', new_user_session_path) %></li>
+                <li><%= link_to "IG登入", user_instagram_omniauth_authorize_path %></li>
               <% end %>
+               
+            </ul><!-- /.sign-in -->   
+          </div><!-- /.nav-right -->
 
-              <li><%= link_to('關於我', user_path(current_user)) %></li>
-              
-              <li><%= link_to('登出', destroy_user_session_path, method: :delete) %></li>
-              
-              <li><%= link_to('修改密碼', edit_user_registration_path) %></li>
-            <% else %>
-              <div class="navbar-brand"><%= link_to('註冊', new_user_registration_path) %></div>
-              <div class="navbar-brand"><%= link_to('登入', new_user_session_path) %></div>
-              <div class="navbar-brand"><%= link_to "用IG登入", user_instagram_omniauth_authorize_path %></div>
-            <% end %>
-          </ul>
-
-        </div><!-- collapse -->
-
-      </div><!-- container-fluid -->
-    </nav>
+        </div><!-- /.container -->
+      </nav><!-- /.navbar -->
+    </header><!-- Page Header -->
 
     <!-- notice & alert -->
     <% if flash[:notice] %>
@@ -77,6 +98,8 @@
     <% end %>
 
     <%= yield %>
+
   </body>
+  
 </html>
 
