--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><i class="fab fa-instagram"></i>Just Dessert</a>
+            <a class="navbar-brand" href="/"><%= image_tag "logo.png", width: 40, height: 40 %></a>
           </div><!-- /.navbar-header -->
 
           <div class="navbar-left">
             <div class="collapse navbar-collapse" id="navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><%= link_to '新募資', new_dessert_path %></li>
+                <li class="navbar-brand">
+                  <%= link_to '新募資', new_dessert_path %>
+                </li>
               </ul>
             </div>
           </div><!-- /.navbar-left -->
@@ -37,13 +39,13 @@
               <% if current_user %>
 
                 <% if current_user&.admin? %>
-                  <li><%= link_to '後台管理', admin_root_path %></li>
+                  <li class="navbar-brand"><%= link_to '後台管理', admin_root_path %></li>
                 <% end %>
       
                 <li class="dropdown mega-avatar">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
                     <span class="avatar w-32">
-                      <%= image_tag(current_user.avatar.url, width: 30, height: 30, class: "img-resonsive img-circle") %>
+                      <%= image_tag(current_user.avatar.url, width: 40, height: 40, class: "img-resonsive img-circle") %>
                     </span>
                     <!-- hidden-xs hides the username on small devices so only the image appears. -->
                     <span class="hidden-xs">
@@ -66,9 +68,9 @@
                 </li><!-- /navbar-item --> 
               
               <% else %>   
-                <li><%= link_to('註冊', new_user_registration_path) %></li>
-                <li><%= link_to('登入', new_user_session_path) %></li>
-                <li><%= link_to "IG登入", user_instagram_omniauth_authorize_path %></li>
+                <li class="navbar-brand"><%= link_to('註冊', new_user_registration_path) %></li>
+                <li class="navbar-brand"><%= link_to('登入', new_user_session_path) %></li>
+                <li class="navbar-brand"><%= link_to "IG登入", user_instagram_omniauth_authorize_path %></li>
               <% end %>
                
             </ul><!-- /.sign-in -->   
